components/openshift-serverless-configuration/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: knative-serving
    servicemesh: "true"
  name: knative-serving
