components/openshift-serverless-configuration/ingress-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: knative
  namespace: knative-serving
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: "serveless-ingress-cert-tls"
    cert-utils-operator.redhat-cop.io/inject-CA: "false"
spec:
  host: a.serverless.apps.${CLUSTER_BASE_DOMAIN}
  to:
    kind: Service
    name: knative-ingress-gateway
    weight: 100
  port:
    targetPort: https
  tls:
    termination: reencrypt
  wildcardPolicy: Subdomain
